Adding icon and card component

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,5 +1,7 @@
 .navbar {
     margin-bottom: 0;
+    font-family: 'Share Tech Mono', monospace;
+    font-family: 'Signika', sans-serif;
     
 }
 
