--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -6,12 +6,17 @@ left: -12px;
 top: -24px; */
 
 background-size: cover;
-height: 200px;
+height: 225px;
 width: 100%;
 
 background: #17E9E0;
 background-image: ('expenseApp.png');
 /* border-radius: 30px; */
+}
+
+img {
+    width: 60px;
+    height: 70px;
 }
 
 #jumboHead {
@@ -22,7 +27,8 @@ height: 27px;
 left: 137px;
 top: 148px; */
 
-/* font-family: Cal; */
+font-family: 'Share Tech Mono', monospace;
+font-family: 'Signika', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 35px;
