--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -4,11 +4,16 @@
     border-radius: 4px;
     overflow-y: scroll;
     overflow-x: hidden;
+   
+  }
+
+  .list-group {
+    margin-left: 30px;
   }
   
-  .list-overflow-container ul {
+  /* .list-overflow-container ul {
     margin: 0;
-  }
+  } */
   
   .list-overflow-container li {
     border-radius: 0px;
