--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -12,6 +12,7 @@ width: 100%;
 background: #17E9E0;
 background-image: ('expenseApp.png');
 border-radius: 30px;
+margin-bottom: 0;
 /* border-radius: 30px; */
 }
 
