--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -4,11 +4,21 @@
     border-radius: 4px;
     overflow-y: scroll;
     overflow-x: hidden;
-   
   }
+
+
 
   .list-group {
     margin-left: 30px;
+    background-color: rgb(34, 37, 37);
+    list-style-type: none;
+    padding: 0;
+    border-radius: 3px;
+    margin-right: 15px;
+    margin-left: 15px;
+    padding-right: 5px;
+    padding-left: 5px;
+    cursor: pointer;
   }
   
   /* .list-overflow-container ul {
