--- a/client/src/pages/LoginPage/style.css
+++ b/client/src/pages/LoginPage/style.css
@@ -7,6 +7,9 @@
 
   button {
     background-color: #A64Ac9!important;
+    color: white!important;
+    font-weight: bold!important;
+    border-color: #A64Ac9!important;
     margin-top: 20px;
     /* margin-bottom: 40px; */
   }
