--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -11,9 +11,10 @@ width: 100%;
 
 background: #17E9E0;
 background-image: ('expenseApp.png');
-border-radius: 30px;
-margin-bottom: 0;
 /* border-radius: 30px; */
+margin-bottom: 0;
+border-bottom-left-radius: 30px;
+border-bottom-right-radius: 30px;
 }
 
 img {
