--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -9,3 +9,9 @@
     border-color: black;
     padding: 15px 15px;
 }
+
+.expenseSum {
+    background-color: black!important;
+    border-color: black;
+    color: white!important;
+}
