--- a/client/src/pages/LoginPage/style.css
+++ b/client/src/pages/LoginPage/style.css
@@ -14,6 +14,11 @@
     /* margin-bottom: 40px; */
   }
 
+  p {
+    margin-top: 60px;
+    text-align: center;
+  }
+
 
 
 @media all and (min-width: 480px) {
