--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -2,6 +2,7 @@
     margin: 20px auto;
     max-width: 320px;
     background-image: linear-gradient(-90deg, #17E9E0, #a64ac9);
+    opacity:.9;
 }
 
 .navBtn {
