--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -2,7 +2,23 @@
     margin-bottom: 0;
     font-family: 'Share Tech Mono', monospace;
     font-family: 'Signika', sans-serif;
+    overflow: hidden;
 }
+
+#navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
+
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
 
 .bg-primary {
     background-color: #19181A!important;
