--- a/client/src/pages/AddExpense/style.css
+++ b/client/src/pages/AddExpense/style.css
@@ -1,4 +1,4 @@
-fieldset {
+/* fieldset {
     background-color: rgb(34, 37, 37);
     font-size: 15px;
     list-style-type: none;
@@ -40,8 +40,6 @@ fieldset {
 .btn-group-sm>.btn, .btn-sm {
     margin-left: 20px;
     height: 50px;
-    /* background-color: #fccd04!important;
-    border-color: #fccd04; */
     color: black;
     margin-bottom: 20px;
     font-size: 15px;
@@ -53,4 +51,4 @@ input, select, textarea {
 
 textarea:focus, input:focus {
     color: black;
-}
+} */
