Styling expenses page

--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -12,7 +12,25 @@
 }
 
 .expenseSum {
-    background-color: black!important;
-    border-color: black;
     color: white!important;
+    margin-top: 30px;
+    text-align: center;
+    margin-left: 0;
 }
+
+/* h1 {
+    font-weight: bold;
+    padding-bottom: 15px;
+} */
+
+.sumDiv {
+    background-color: teal;
+    margin: 20px auto;
+    max-width: 320px;
+    padding-top: 1px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 15px;
+    font-weight: bold;
+    padding-bottom: 15px;
+}
+
