--- a/client/src/components/DeleteBtn/style.css
+++ b/client/src/components/DeleteBtn/style.css
@@ -1,5 +1,7 @@
 .delete-btn {
     border-color: #a64ac9;
     margin-right: 10px;
+    margin-bottom: 20px;
     color: black!important;
+    /* float: right; */
 }
