--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -1,46 +1,9 @@
-.list-overflow-container {
-    max-height: 545px;
-    border: 1px #DDDDDD solid;
-    border-radius: 4px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
 
-  .list-group {
-    margin-left: 30px;
-    background-color: rgb(34, 37, 37);
-    list-style-type: none;
-    padding: 0;
-    border-radius: 3px;
-    margin-right: 15px;
-    margin-left: 15px;
-    padding-right: 5px;
-    padding-left: 5px;
-    cursor: pointer;
-  }
-  
-  h2 {
-    font-weight: bold;
-  }
-  
-  .list-overflow-container li {
-    border-radius: 0px;
-    border-left: none;
-    border-right: none;
-  }
-  
-  .list-overflow-container li * {
-    cursor: pointer;
-  }
-  
-  .list-overflow-container li a {
-    color: #2A878C;
-  }
-  
-  .list-overflow-container li:first-child {
-    border-top: none;
-  }
-  
-  .list-overflow-container li:last-child {
-    border-bottom: none;
-  }
+.expenseList h2 {
+    margin-top: 0;
+}
+
+.expenseList p {
+    margin-top: 0;
+    
+}
