--- a/client/src/components/ModifyBtn/style.css
+++ b/client/src/components/ModifyBtn/style.css
@@ -2,4 +2,5 @@
     background-color: #ffb48f!important;
     border-color: #ffb48f!important;
     color: black!important;
+    margin-bottom: 20px;
 }
