--- a/client/src/pages/Expenses/style.css
+++ b/client/src/pages/Expenses/style.css
@@ -1,3 +1,44 @@
 .primary-btn {
     margin-left: 40px;
 }
+
+.expenseList {
+    /* max-width: 320px; */
+    margin-top: 5px;
+    background-color: teal;
+    padding-left: 5px;
+    text-align:left;
+    display: inline;
+    /* margin: 20px auto; */   
+
+}
+
+.expenseList h2, h3, p {
+    float: left;
+}
+
+.expenseList h3 {
+    margin-right: 10px;
+}
+
+.expenseList h2, h3 {
+    padding-top: 25px;
+}
+
+.expenseList p {
+    margin-left: 20px;
+}
+
+.expenseList button {
+    margin-top: 0;
+}
+
+
+/* .expenseList h2 {
+    margin-top: 0;
+}
+
+.expenseList p {
+    margin-top: 0;
+
+}  */
