--- a/client/src/components/Logout/style.css
+++ b/client/src/components/Logout/style.css
@@ -1,3 +1,11 @@
-/* h5 {
-    margin-left: 60px;
-} */
+h5 {
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 0;
+    margin-left: 40px;
+    font-size: 15px;
+    font-weight: bold;
+    opacity: .9;
+  }
