--- a/client/src/pages/Expense/style.css
+++ b/client/src/pages/Expense/style.css
@@ -52,3 +52,10 @@ input, select, textarea {
 textarea:focus, input:focus {
     color: black;
 } */
+
+
+.addExpense {
+    margin-left: 15px;
+    margin-left: 40px;
+    margin-bottom: 30px;
+}
