--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -23,7 +23,7 @@
   } */
 
 .bg-primary {
-    background-color: #19181A!important;
+    background-color: #07889b!important;
     color: white;
 }
 .navbar-brand {
