--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -32,9 +32,13 @@
     border-radius: 15px;
     font-weight: bold;
     padding-bottom: 15px;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    background-color: #373737;
 }
 
 .card-text {
     float: none;
+    text-align: center;
+    padding-top: 10px;
 }
 
