--- a/client/src/pages/SignUp/style.css
+++ b/client/src/pages/SignUp/style.css
@@ -14,6 +14,12 @@ a {
   color: white;
 }
 
+.signUp p {
+  margin-top: 30px;
+  text-align: center;
+  float: none; 
+} 
+
 @media all and (min-width: 480px) {
     .Signup {
       padding: 60px 0;
