--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -9,7 +9,7 @@ background-size: cover;
 height: 225px;
 width: 100%;
 
-background: #66b9bf;
+background: #43A19E;
 background-image: ('expenseApp.png');
 margin-bottom: 0;
 border-bottom-left-radius: 30px;
