--- a/client/src/pages/Expenses/style.css
+++ b/client/src/pages/Expenses/style.css
@@ -1,14 +1,16 @@
 .primary-btn {
     margin-left: 40px;
+    color: white;
+    background-color: #FF9824;
 }
 
 #expenseList {
     margin-top: 5px;
-    background-color: #373737;
+    margin-bottom: 5px;
     padding-left: 5px;
     text-align:left;
     display: inline;  
-    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 } 
 
 #expenseList h2, h3, p {
