--- a/client/src/components/ModifyBtn/style.css
+++ b/client/src/components/ModifyBtn/style.css
@@ -1,6 +1,5 @@
 .secondary-btn {
-    background-color: #ffb48f!important;
-    border-color: #ffb48f!important;
-    color: black!important;
+    background-color: #FF9824!important;
+    border-color: #FF9824!important;
     margin-bottom: 20px;
 }
