--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -1,8 +1,11 @@
 .card {
     margin: 20px auto;
     max-width: 320px;
-    background-image: linear-gradient(-90deg, #17E9E0, #a64ac9);
+    /* background-color: #07889b; */
     opacity:.9;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #373737;    
+
 }
 
 .navBtn {
@@ -24,7 +27,6 @@
 } */
 
 .sumDiv {
-    background-color: teal;
     margin: 20px auto;
     max-width: 320px;
     padding-top: 1px;
@@ -32,7 +34,6 @@
     border-radius: 15px;
     font-weight: bold;
     padding-bottom: 15px;
-    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
     background-color: #373737;
 }
 
