--- a/client/src/pages/LoginPage/style.css
+++ b/client/src/pages/LoginPage/style.css
@@ -7,10 +7,10 @@
   }
 
   button {
-    background-color: #e37222!important;
+    background-color: #7B43A1!important;
     color: white!important;
     font-weight: bold!important;
-    border-color: #07889b!important;
+    border-color: #7B43A1!important;
     margin-top: 20px;
     /* margin-bottom: 40px; */
   }
