Deleting unnecessary code

--- a/client/src/components/DeleteBtn/style.css
+++ b/client/src/components/DeleteBtn/style.css
@@ -3,4 +3,6 @@
     background-color: #F2317A!important;
     margin-right: 10px;
     margin-bottom: 20px;
+    font-weight: normal!important;
+
 }
