--- a/client/src/components/ModifyBtn/style.css
+++ b/client/src/components/ModifyBtn/style.css
@@ -2,4 +2,5 @@
     background-color: #FF9824!important;
     border-color: #FF9824!important;
     margin-bottom: 20px;
+    font-weight: normal!important;
 }
