--- a/client/src/components/AddCategoryBtn/style.css
+++ b/client/src/components/AddCategoryBtn/style.css
@@ -1,5 +1,6 @@
 .primary-btn {
-    color: black!important;
+    color: white!important;
+    font-weight: normal!important;
     margin-bottom: 20px;
     margin-top: 30px;
 }
